Version 1.23.2  *
==================
- Fixed crash on open a non-gms file.
- Adjust help document theme according to Studio light/dark theme when starting Studio or changing Studio theme.
- Improved GAMS Licensing dialog behaviour on Windows, i.e. when Studio or GAMS is used in a director with a Unicode name.
- Upgraded ti Qt 6.10.1

Version 1.23.1
==================
- Added release overview page to the GAMS Studio welcome page.
- Fixed dragging schematic list and dictionary from definitions and dropping to the instructions in Connect Editor.
- Improved view and edit experience with tooltips and different color schemes in Connect Editor.
- Improved GAMS run parameters use the relative path to the GMS file (from Working Directory perspective) if possible, to provide better directory Unicode name support on Windows.

Version 1.23.0
==================
- Added storing of the fold state for known source files.
- Added keyboard navigation and selection to the tables of the model library explorer.
- Added filter and search capability to the Project Explorer.
- Added switching of the default working directory when switching the project.
- Added instant save to the project options as long as the paths for working directory and base directory exist.
- Fix broken links to option document when pressing `F1` in solver option editor.
- Improved connect editor workflow by linking agent and option name to corresponding entry in connect document with `F1` hotkey.
- Removed Windows 10 message box to disable the Help View to prevent crashes (Windows 10 reached its EOL).
- Upgraded Studio to `Qt 6.10.0`.

Version 1.22.5
==================
- Fixed crash on Windows when installing a GAMS license in a user home directory, which has an Unicode name.
- Fixed an unsuccessful write to `gamsconfig.yaml`, e.g. when the permissions are not set properly.
- Fixed search results for `Open Tabs` and `All Files`, i.e. unrelated files have been searched and listed.