@@ -18,9 +18,8 @@
  * along with this program. If not, see <http://www.gnu.org/licenses/>.
  */
 #include "pathrequest.h"
-#include "ui_pathrequest.h"
 #include "projectrepo.h"
-#include <QFileDialog>
+#include <QMessageBox>
 #include <QPushButton>
 
 namespace gams {
@@ -28,54 +27,64 @@ namespace studio {
 namespace path {
 
 PathRequest::PathRequest(QWidget *parent) :
-    QDialog(parent),
-    ui(new Ui::PathRequest)
+    QObject(parent),
+    mParent(parent)
 {
-    ui->setupUi(this);
-    setModal(true);
-    setWindowFlag(Qt::WindowContextHelpButtonHint, false);
-    setWindowTitle("Missing file(s) for project ");
-    mInitialText = ui->laText->text();
-    adjustSize();
 }
 
 PathRequest::~PathRequest()
 {
-    delete ui;
 }
 
-void PathRequest::init(ProjectRepo *repo, const QString &name, const QString &baseDir, const QVariantMap &data)
+void PathRequest::init(ProjectRepo *repo, const QString &baseDir, const QVariantMap &data)
 {
     mData = data;
     mProjectRepo = repo;
     mBaseDir = QDir::toNativeSeparators(baseDir);
-    mInitialText = mInitialText.arg("Opening project " + name + ":<br/>%1");
-    setWindowTitle("Missing file(s) for project " + name);
 }
 
-bool PathRequest::checkProject()
+bool PathRequest::checkProject(const QString &gspName)
 {
     int count;
     int ignored;
     QStringList missed;
     int ok = mProjectRepo->checkRead(mData, count, ignored, missed, mBaseDir);
     if (ok) {
-        if (ignored)
-            ui->laText->setText(QString("All referenced necessary files found, %1 ignored.")
-                                .arg(QString::number(ignored) + (ignored==1 ? " file" : "files")));
-        else
-            ui->laText->setText(QString("All referenced files found."));
-        ui->laText->setToolTip(QString());
+        emit acceptOpen();
     } else {
         for (const QString &file : missed)
-            emit warning("File not found: " + file);
+            emit warning("File not found: " + QDir::toNativeSeparators(file));
         bool one = (missed.size() == 1);
-        ui->laText->setText(mInitialText.arg(one ? "One file" : QString::number(missed.size()) + " files"));
-        ui->laText->setToolTip("Missing file"+QString(missed.size()==1 ? "":"s")+":\n" + missed.join("\n"));
+        mMsgBox = new QMessageBox(mParent);
+        QString text = "Open project\n" + QDir::toNativeSeparators(gspName) +
+                       "\n\n%1 referenced in the project could not be found at its relative path. You can\n"
+                       "- copy the project files to the matching relative path\n"
+                       "- ignore missing files and proceed";
+        mMsgBox->setText(text.arg(one ? "One file" : QString::number(missed.size()) + " files"));
+        mMsgBox->setDetailedText("Missing file" + QString(missed.size()==1 ? "":"s") + ":\n"
+                               + QDir::toNativeSeparators(missed.join("\n")));
+        QPushButton *ok = mMsgBox->addButton(QMessageBox::Ok);
+        mMsgBox->addButton(QMessageBox::Cancel);
+        mMsgBox->setDefaultButton(ok);
+        if (QTextEdit *edit = mMsgBox->findChild<QTextEdit*>())
+            edit->setLineWrapMode(QTextEdit::NoWrap);
+        connect(mMsgBox, &QMessageBox::accepted, this, &PathRequest::acceptOpen);
+        connect(mMsgBox, &QMessageBox::finished, this, [this]() {
+            mMsgBox->deleteLater();
+            mMsgBox = nullptr;
+            emit done();
+        });
+
+        mMsgBox->setModal(true);
+        mMsgBox->open();
+#ifdef __APPLE__
+        mMsgBox->show();
+        mMsgBox->raise();
+#endif
     }
+
     return missed.isEmpty();
 }
-
 
 } // namespace path
 } // namespace studio
