@@ -605,15 +605,8 @@ void MainWindow::initWelcomePage()
     //    When the labels have been recalculated, the string that belongs to the label becomes invalid.
     connect(mWp, &WelcomePage::openProject, this, [this](QString projectPath) {
         PExProjectNode *project = mProjectRepo.findProject(projectPath);
-        if (!project && QFile::exists(projectPath)) {
-            mProjectRepo.read(QVariantMap(), projectPath);
-            project = mProjectRepo.findProject(projectPath);
-        }
-        if (project && project->mainFile()) {
-            openFile(project->mainFile(), true, project);
-        }
-        if (project && mProjectRepo.focussedProject())
-            focusProject(project);
+        if (!project && QFile::exists(projectPath))
+            openProject(projectPath);
     });
 
     connect(mWp, &WelcomePage::openFilePath, this, [this](const QString &filePath) {
@@ -3463,34 +3456,22 @@ void MainWindow::openProject(const QString &gspFile)
                 updateSystemLogTab(true);
             });
             QString basePath = QFileInfo(gspFile).path();
-            dialog->init(&mProjectRepo, gspFile, basePath, map);
-
-            if (dialog->checkProject()) {
+            dialog->init(&mProjectRepo, basePath, map);
+            mOpenPermission = opNoGsp;
+            connect(dialog, &path::PathRequest::done, this, [this, dialog]() {
                 dialog->deleteLater();
+                mOpenPermission = opAll;
+                QTimer::singleShot(0, this, &MainWindow::openDelayedFiles);
+            });
+            connect(dialog, &path::PathRequest::acceptOpen, this, [this, map, gspFile]() {
                 bool hasProjectFocus = mProjectRepo.focussedProject();
-                mProjectRepo.read(map, gspFile);
+                mProjectRepo.read(map, gspFile, false);
+                mOpenPermission = opAll;
                 if (hasProjectFocus)
                     focusProject(mProjectRepo.findProject(gspFile));
-            } else {
-                connect(dialog, &path::PathRequest::finished, this, [this, dialog]() {
-                    dialog->deleteLater();
-                    mOpenPermission = opAll;
-                    QTimer::singleShot(0, this, &MainWindow::openDelayedFiles);
-                });
-                connect(dialog, &path::PathRequest::accepted, this, [this, map, gspFile]() {
-                    bool hasProjectFocus = mProjectRepo.focussedProject();
-                    mProjectRepo.read(map, gspFile, false);
-                    if (hasProjectFocus)
-                        focusProject(mProjectRepo.findProject(gspFile));
-                });
-                mOpenPermission = opNoGsp;
-                dialog->open();
-#ifdef __APPLE__
-                dialog->show();
-                dialog->raise();
-#endif
-            }
+            });
 
+            dialog->checkProject(gspFile);
         }
     } else {
         appendSystemLogError("Couldn't open project " + gspFile);
@@ -4170,18 +4151,16 @@ PExFileNode* MainWindow::openFilePath(const QString filePath, PExProjectNode* kn
         if (project)
             fileNode = project->findFile(fileMeta);
     }
-    // create the destination group if necessary
+    // create the destination project if necessary
     if (!project && !fileNode) {
         QFileInfo fi(filePath);
         QString proFile = fi.path() + "/" + fi.completeBaseName() + ".gsp";
         if (QFile::exists(proFile)) {
-            bool hasProjectFocus = mProjectRepo.focussedProject();
-            mProjectRepo.read(QVariantMap(), proFile);
+            openProject(proFile);
             project = mProjectRepo.findProject(proFile);
-            if (hasProjectFocus)
-                focusProject(project);
-        } else
+        } else {
             project = mProjectRepo.createProject(fi.completeBaseName(), fi.absolutePath(), "", onExist_Project);
+        }
     }
 
     // create node if missing
