@@ -544,7 +544,6 @@ FORMS += \
     engine/efieditor.ui \
     engine/enginestartdialog.ui \
     file/gprimporter.ui \
-    file/pathrequest.ui \
     file/pathselect.ui \
     file/projectedit.ui \
     filesystemwidget.ui \
